gitea/Prod/hugo-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hugo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hugo
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: hugo
        image: da3dalus/hugo:test
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        command: ["hugo"]
        args: ["server", "-p=8080", "--bind=0.0.0.0", "--source=/tmp/src/kube-hugo/"]
        volumeMounts:
        - name: source-content
          mountPath: "/tmp/src/"
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: source-content
        emptyDir: {}
