gitea/Prod/letsEncrypt.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-letsencrypt
  namespace: gitea
  labels:
    name: gitea
spec:
  ports:
    - name: gitea-letsencrypt
      port: 8080 
      targetPort: 8080
  selector:
    service: gitea
  type: NodePort
