gitea/Prod/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
  labels:
    service: gitea
spec:
  ports:
    - name: gitea-ssh
      port: 2222
      targetPort: 2222
  selector:
    service: gitea
  type: NodePort
