gitea/Prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-web
  labels:
    name: gitea-web
spec:
  selector:
    service: gitea
  ports:
    - name: gitea-web
      port: 443 
      targetPort: 6443
